# cpp-backend-game

./: CMakeLists.txt  CMakeUserPresets.json  Dockerfile  build_and_launch.txt  conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.txt  conaninfo.txt  graph_info.json  launch.txt
src/: application_listener.h  args.cpp  args.h  collision_detector.cpp  collision_detector.h  game_application.cpp  game_application.h  geom.h  http_server.cpp  http_server.h  json_loader.cpp  json_loader.h  logging_setup.h  main.cpp  model.cpp  model.h  model_serialization.h  record_repository.cpp  record_repository.h  request_handler.cpp  request_handler.h  serializing_listener.cpp  serializing_listener.h  state_serializer.cpp  state_serializer.h  tagged.h  token.h
tests/: collision-detector-tests.cpp  loot_generator_tests.cpp
